--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 <head>
-	<title>Mars Rover Kata!</title>
-	<script type="text/javascript" src="rover.js"></script>
+	<title>Mars Rover Kata! by DDO</title>
+	<script type="text/javascript" src="ih-prework-html-css/mars_rover/rover.js"></script>
 </head>
 <body>
+
+
 
 </body>
 </html>
