--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Mars Rover Kata! by DDO</title>
-	<script type="text/javascript" src="ih-prework-html-css/mars_rover/rover.js"></script>
+	<script type="text/javascript" src="rover.js"></script>
 </head>
 <body>
 
